added rest controllers, exception handler and some improvements